# kiro-chatbot

.kiro/specs/ai-chatbot-multi-provider/: design.md  requirements.md  tasks.md
api/: .env.example  TASK_2_COMPLETION.md  TESTING_GUIDE.md  alembic.ini  app.py  migration_commands.txt  pyproject.toml  task-4-implementation-summary.md  test_ai_providers.py  test_manual_providers.py  test_models.py  verify_migration.py
api/alembic/: env.py  preview.py
api/alembic/versions/: d6d358bcec16_initial_migration.py
api/database/: __init__.py  base.py  models.py  setup.sql  tables.py
api/models/: __init__.py  base.py  conversation.py  document.py  user.py
api/repositories/: __init__.py  base.py  conversation_repository.py  document_repository.py  rag_debug_repository.py  user_repository.py
api/routers/: __init__.py  auth.py  chat.py  files.py
api/services/: __init__.py  ai_providers.py  auth_service.py  base.py  file_service.py  vector_service.py
api/tests/: test_file_service.py  test_file_service_cli.py  test_file_service_simple.py  test_file_vector_integration.py
api/tests/llm/: test_cli.py
client/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.vue  main.ts  test-utils.ts
client/src/components/chat/: ChatWindow.vue  CitationList.vue  FileUploadArea.vue  MessageBubble.vue  (+1 more)
client/src/lib/: query-client.ts
client/src/stores/: auth.ts  conversations.ts  files.ts  notifications.ts
client/src/types/: global.d.ts  index.ts
client/src/views/: HomeView.vue
(+7 files in other folders)
