[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=41.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "aiofiles>=23.0.0",
    "pillow>=10.0.0",
    "boto3>=1.28.0",
    "python-multipart>=0.0.6",
]
